--- a/static/apps.html
+++ b/static/apps.html
@@ -120,7 +120,7 @@ document.addEventListener('keydown', function(event) {
          </ul>
        </nav>
      
-      <a href="hvtrs8%2F-wuw%2Cgmoelg.aoo%2Fue%60hr"
+      <a href="Astrix/hvtrs8%2F-wuw%2Cgmoelg.aoo%2Fue%60hr"
        <div class="icon-container">
         <img src="imgs/google.jpg" alt="Example Image" width="150" height="150">
         <div class="icon-text">Google
