--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@ document.addEventListener('keydown', function(event) {
              <li><a href="games.html">Games</a></li>
      
              <li><a href="apps.html">Apps</a></li>
-             <li><a href="ai.html">Ai</a></li>
+             <li><a href="hvtrs8%2F-cjavgrtfeoo%2Cilfm%2Fahct-">Ai</a></li>
            </div>
          </ul>
        </nav>
