--- a/static/apps.html
+++ b/static/apps.html
@@ -115,7 +115,7 @@ document.addEventListener('keydown', function(event) {
              <li><a href="games.html">Games</a></li>
      
              <li><a href="apps.html">Apps</a></li>
-             <li><a href="hvtrs8%2F-cjavgrtfeoo%2Cilfm%2Fahct-">Ai</a></li>
+             <li><a href="Astrix/hvtrs8%2F-cjavgrtfeoo%2Cilfm%2Fahct-">Ai</a></li>
            </div>
          </ul>
        </nav>
